# scripta-compiler-v2

./: .gitignore  CLAUDE.md  LICENSE  LaTeXToScripta.md  README.md  TestAlignedConsole.elm  TestAlignedDoubleBackslash.elm  TestAlignedL2S.elm  TestLaTeXToScriptaSuite.elm  TestNewcommandL2S.elm  comprehensive-l2s-tests.html  diary.md  documentation.json  elm.json  etex-notes.md  run-latex-to-scripta-tests.html  scripts.yaml  test-aligned-l2s.html  test-comprehensive-l2s.html  test-latex-to-scripta-suite.html  test-runner.js  translation.txt  tree_usage.md
Benchmark/: README.md  elm.json  main.js  run.js
CLI/: scripts.yaml
Demo/: README.md  elm-watch.json  elm.json  make.sh  run.sh
DemoScripta/: .gitignore  CLAUDE.md  README-SQLITE.md  download_convert_images.sh  elm-watch.json  elm.json  make.sh  package-lock.json  package.json  process_images.sh  publish.sh  publish1.sh  serve.sh
DemoScripta/src-tauri/: Cargo.toml  tauri.conf.json
DemoScripta/src-tauri/capabilities/: default.json
DemoScripta/src-tauri/src/: main.rs
DemoScriptaLive/: .gitignore  BUILD.md  README-NAMING.md  TAURI_README.md  TODO.md  build-desktop.sh  build-sqlite.sh  debug-align.html  debug-image-captioned.html  debug-image-captioned.js  debug-section.html  debug-subsection.html  debug.html  editor-sync.md  elm-watch-full.json  elm-watch.json  elm.json  launch-scripta.sh  minimal-href-test.html  minimal-href-test.js  my-redirections-for-announcement.txt  package.json  publish.sh  run-live.sh  runapp  scripts.yaml  serve.sh  test-16.elm  test-16.html  test-16.js  test-17.elm  test-17.html  test-17.js  test-after-enclose.elm  test-all.elm  (+67 more)
DemoScriptaLive/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
DemoScriptaLive/src-tauri/icons/: icon.icns
DemoScriptaLive/src-tauri/src/: main.rs
(+357 files in other folders)
