[package]
name = "scripta-live"
version = "0.2.0"
description = "Scripta Live Desktop Application"
authors = ["Scripta Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.18", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.18", features = [] }
tauri-plugin-shell = "2.0.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
